--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="zh-cn">
 
 <head>
-	<meta charset="UTF-8">
+	<meta charset="UTF-8" />
+	<base href="https://wbwdxh.github.io/LiteMarkster/" />
 	<title></title>
 </head>
 
